# Gemma4Hack

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/routes/: auth.py  chat.py  notes.py
app/core/: auth.py  config.py
app/schemas/: chat.py  notes.py
app/services/: article_text.py  chat_store.py  gemma_notes.py  pdf_text.py  rag.py  supabase_xp.py  xp.py  youtube_text.py  youtube_videos.py
docs/: database_design.sql
tests/: test_article_text.py  test_chat_api.py  test_gemma_notes.py  test_pdf_text.py  test_rag.py  test_youtube_text.py  test_youtube_videos.py
