[project]
name = "gemma4hack-backend"
version = "0.1.0"
description = "Backend API for generating ADHD-friendly study notes from uploaded PDFs using hosted Gemma via the Gemini API."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pypdf>=4.3.0,<6.0.0",
    "google-genai>=0.8.0,<2.0.0",
    "pinecone>=7.0.0,<8.0.0",
    "youtube-transcript-api>=1.2.0,<2.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
